--- a/loading_script.ipynb
+++ b/loading_script.ipynb
@@ -10,7 +10,10 @@
     "# tasks = [banana_flowers, avocado_flowers]\n",
     "# data folders: data (images) should be at ~/data/Rahan/{rask}\n",
     "\n",
-    "task = 'banana_flowers'"
+    "task = 'banana_flowers'\n",
+    "\n",
+    "# update the following command from via to coco if you want to load coco format data\n",
+    "data_types ={'banana_flowers':'via','avocado_flowers':'via','cucumber_flowers_3':'coco'}"
    ]
   },
   {
@@ -31,13 +34,6 @@
    "source": [
     "from utils import *"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -121,15 +117,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_types ={'banana_flowers':'via','avocado_flowers':'via','cucumber_flowers_3':'coco'}"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
@@ -150,7 +137,7 @@
    ],
    "source": [
     "\n",
-    "f=Flower_detection('banana_flowers') #avocado_flower\n",
+    "f=Flower_detection(task) #avocado_flower\n",
     "f.load_data(data_types[f.task])\n",
     "f.model = f.load_model('last', 'inference') #load last model from designated folder"
    ]
