--- a/loading_script.ipynb
+++ b/loading_script.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "# need to put models in ./logs/{task}/{model}\n",
     "# tasks = [banana_flowers, avocado_flowers]\n",
-    "# data folders: data (images) should be at ~/data/Rahan/{rask}\n",
+    "# data folders: data (images) should be at ~/data/Rahan/{task}\n",
     "\n",
     "task = 'banana_flowers'\n",
     "\n",
@@ -136,6 +136,7 @@
     }
    ],
    "source": [
+    "# loading the model and data\n",
     "\n",
     "f=Flower_detection(task) #avocado_flower\n",
     "f.load_data(data_types[f.task])\n",
